--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-simple-captcha": "^9.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
